--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
-Hello js rocket
-
-<script type="text/javascript">
-  console.log("hello there friends!");
-</script>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Js Rocket</title>
+    <script type="text/javascript" src="js-rocket/script.js"></script>
+  </head>
+  <body>
+      <h1>hello js rocket</h1>
+  </body>
+</html>
