--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
   <head>
     <title>Js Rocket</title>
-    <script type="text/javascript" src="js-rocket/script.js"></script>
+    <script type="text/javascript" src="js/script.js"></script>
+    <link rel="stylesheet" href="css/master.css">
   </head>
   <body>
       <h1>hello js rocket</h1>
+      <a href="#" onclick="car.switchCar(true);">Click me</a>
   </body>
 </html>
